# cp

./: .gitignore  CMakeLists.txt  Makefile  README.md  cp.h  limex_callables.h  limex_handle.h  main.cpp  solver.h
hexaly/: CMakeLists.txt  hexaly_adapter.cpp  hexaly_adapter.h
scip/: CMakeLists.txt  indexed_variables.cpp  indexed_variables.h  scip_adapter.cpp  scip_adapter.h  sequence.cpp  sequence.h
tests/: CMakeLists.txt  collection_test.cpp  cp.cpp  limex.cpp  test.cpp  test_limex.cpp
tests/hexaly/: CMakeLists.txt  test.cpp  test_collection.cpp
tests/scip/: CMakeLists.txt  collection_test.cpp  test.cpp
