# CP interface test (always built - header-only)
add_executable(test_cp test.cpp)
target_link_libraries(test_cp PRIVATE cp)
add_test(NAME test_cp COMMAND test_cp)

# LIMEX tests (only if LIMEX was fetched)
if(BUILD_LIMEX_TESTS AND limex_SOURCE_DIR)
    add_executable(test_limex test_limex.cpp)
    target_link_libraries(test_limex PRIVATE cp)
    target_include_directories(test_limex PRIVATE ${limex_SOURCE_DIR})
    add_test(NAME test_limex COMMAND test_limex)
endif()

# SCIP tests (only if SCIP was built)
if(TARGET libscip)
    add_subdirectory(scip)
endif()

# Hexaly tests (only if Hexaly adapter was enabled)
if(USE_HEXALY)
    add_subdirectory(hexaly)
endif()
